# Cotrex

./: .env.example  .gitignore  .gitmodules  .graphifyignore  404.html  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  index.html  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
.tokex/skills/: graphify.md  tokex.md
assets/css/: styles.f3c6772d.css
assets/js/: 0e384e19.ea13967a.js  17896441.8ea39416.js  237.74de69a7.js  36994c47.ebcac7fe.js  3847b3ea.efd99617.js  3b8c55ea.914f514c.js  436.2de61669.js  448023bc.f1be449c.js  5281b7a2.7ce6a6ca.js  542.5e584523.js  5e95c892.f3010c2c.js  6476eba6.e16dd056.js  814f3328.2097e770.js  8f030830.a0073595.js  9dd9d631.9ed16c70.js  a6aa9e1f.e29efa5d.js  a7456010.e47fbf27.js  a7bd4aaa.2bab6c7d.js  a94703ab.aac1a328.js  aba21aa0.16b194c5.js  c182aa11.181b58b2.js  c4f5d8e4.e0c46064.js  ca4d3f77.255e0d61.js  main.7de30fcf.js  runtime~main.cc68392f.js
blog/: index.html
docs/: index.html
docs/architecture/: index.html
docs/development/: index.html
docs/docs/: downloads.md  usage.md
docs/downloads/: index.html
docs/installation/: index.html
docs/mcp/: index.html
docs/setup/: index.html
docs/usage/: index.html
plugins/cotrex-usage/src/: index.tsx
src/: config.rs  graphify.rs  install.rs  install_agent.rs  intent.rs  llm.rs  main.rs  mcp.rs  normalize.rs  orchestrate.rs  permission.rs  plan.rs  prompt.rs  script.rs  tool.rs
src/config/: install_agent.rs
src/core/: intent.rs
src/dispatch/: dispatch.rs
src/graphify/: graphify.rs
src/llm/: mcp.rs
src/usage/: mod.rs
