[workspace]
members = [".", "vendor/rtk"]
default-members = [".", "vendor/rtk"]
resolver = "2"

[package]
name = "aem"
version = "0.1.0"
edition = "2021"
description = "Agent Execution Middleware: a deterministic RTK orchestration layer that normalizes agent intent and stream output without owning execution."

[[bin]]
name = "aem"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
